test/parser/error/err_22_while_do_missing.pl0
program p; 
var x; 
begin 
while x > 0 x := 1 
end